@@ -60,6 +60,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2926613 [edit] Copy database shows errors when DB has foreign key
 
 3.2.6.0 (not yet released)
+- bug #2931216 [config] Relations settings not updated on config change 
 
 3.2.5.0 (2010-01-10)
 - patch #2903400 [bookmarks] Status of bookmark table, 
